--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "ts-calculator",
+  "name": "pationator",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "ts-node": "ts-node",
-    "calculateExercises": "ts-node calculateExercises.ts",
-    "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.2",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
@@ -21,7 +22,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "description": ""
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  }
 }
